--- a/res/layout/list_item_product.xml
+++ b/res/layout/list_item_product.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="@dimen/activity_vertical_margin"
     android:orientation="horizontal" >
 
     <ImageView
