--- a/res/menu/global.xml
+++ b/res/menu/global.xml
@@ -6,5 +6,11 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/addItem"
+        android:icon="@android:drawable/ic_input_add"
+        android:orderInCategory="100"
+        android:title="@string/action_add_product"/>
+    
 
 </menu>
