--- a/res/layout/activity_add_product.xml
+++ b/res/layout/activity_add_product.xml
@@ -1,118 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ScrollView1"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:layout_margin="@dimen/activity_horizontal_margin"
-    android:orientation="vertical" >
+    android:layout_margin="@dimen/activity_horizontal_margin" >
 
-   <LinearLayout
-       android:layout_width="fill_parent"
-       android:layout_height="wrap_content"
-       android:layout_marginLeft="5dp"
-       android:layout_marginRight="5dp"
-       android:orientation="vertical" >
-
-       <LinearLayout
-           android:layout_width="fill_parent"
-           android:layout_height="wrap_content"
-           android:layout_marginBottom="@dimen/activity_vertical_margin"
-           android:orientation="horizontal" >
-
-           <EditText
-               android:id="@+id/nameNewText"
-               android:layout_width="match_parent"
-               android:layout_height="fill_parent"
-               android:layout_weight="1"
-               android:ems="10"
-               android:hint="@string/name_lable" >
-
-               <requestFocus />
-           </EditText>
-
-           <ImageView
-               android:id="@+id/prodImage"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_weight="1"
-               android:src="@android:drawable/ic_menu_camera" />
-       </LinearLayout>
-
-       <LinearLayout
-           android:layout_width="fill_parent"
-           android:layout_height="wrap_content"
-           android:layout_marginBottom="@dimen/activity_vertical_margin"
-           android:orientation="vertical" >
-
-           <TextView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text="@string/stock_lable" />
-
-           <EditText
-               android:id="@+id/stockNewText"
-               android:layout_width="fill_parent"
-               android:layout_height="wrap_content"
-               android:inputType="number" />
-       </LinearLayout>
-
-       <LinearLayout
-           android:layout_width="fill_parent"
-           android:layout_height="fill_parent"
-           android:baselineAligned="false"
-           android:orientation="horizontal" >
-
-           <LinearLayout
-               android:layout_width="0dp"
-               android:layout_height="fill_parent"
-               android:layout_weight="1"
-               android:orientation="vertical" >
-
-               <TextView
-                   android:layout_width="fill_parent"
-                   android:layout_height="wrap_content"
-                   android:text="@string/price_lable" />
-
-               <EditText
-                   android:id="@+id/priceNewText"
-                   android:layout_width="fill_parent"
-                   android:layout_height="wrap_content"
-                   android:inputType="numberDecimal" />
-           </LinearLayout>
-
-           <LinearLayout
-               android:layout_width="0dp"
-               android:layout_height="wrap_content"
-               android:layout_weight="1"
-               android:orientation="vertical" >
-
-               <TextView
-                   android:layout_width="fill_parent"
-                   android:layout_height="wrap_content"
-                   android:text="@string/cost_lable" />
-
-               <EditText
-                   android:id="@+id/costNewText"
-                   android:layout_width="fill_parent"
-                   android:layout_height="wrap_content"
-                   android:inputType="numberDecimal" />
-           </LinearLayout>
-       </LinearLayout>
-   </LinearLayout>
-    
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="20dp" >
+        android:orientation="vertical" >
 
-        <Button
-            android:id="@+id/bttAddItem"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="@string/add_btt"
-            android:width="70dp" />
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:orientation="vertical" >
 
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:orientation="horizontal" >
+
+                <EditText
+                    android:id="@+id/nameNewText"
+                    android:layout_width="match_parent"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:hint="@string/name_label" />
+
+                <ImageView
+                    android:id="@+id/prodImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:contentDescription="@string/add_new_image_descript"
+                    android:src="@android:drawable/ic_menu_camera" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:orientation="vertical" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/stock_label" />
+
+                <EditText
+                    android:id="@+id/stockNewText"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="number" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:baselineAligned="false"
+                android:orientation="horizontal" >
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical" >
+
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/price_label" />
+
+                    <EditText
+                        android:id="@+id/priceNewText"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="numberDecimal" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical" >
+
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/cost_label" />
+
+                    <EditText
+                        android:id="@+id/costNewText"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="numberDecimal" />
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="20dp" >
+
+            <Button
+                android:id="@+id/bttAddItem"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/add_btt"
+                android:width="70dp" />
+        </LinearLayout>
     </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
