--- a/res/menu/product_list.xml
+++ b/res/menu/product_list.xml
@@ -1,13 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="es.ucm.pad.teamjvr.mylittlebusiness.ProductListActivity" >
 
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never"/>
+        android:title="@string/action_settings"/>
     <item
         android:id="@+id/addItem"
         android:icon="@android:drawable/ic_input_add"
