Changes on ProductListActivity (default empty msg) and list_item_product.xml (ImageView max and min dimensions, not working at all).

--- a/res/layout/list_item_product.xml
+++ b/res/layout/list_item_product.xml
@@ -10,11 +10,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/product_image_descrip"
+        android:maxWidth="20dp"
+        android:maxHeight="20dp"
+        android:minHeight="17dp"
+        android:minWidth="17dp"
         android:src="@android:drawable/ic_menu_gallery" />
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical" >
 
         <TextView
