--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,3 +1,28 @@
-<resources>
-
+<?xml version="1.0" encoding="utf-8"?>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
+    <style name="title_style" parent="android:Widget.TextView">
+        <item name="android:gravity">center</item>
+        <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="txt_fieldStyle" parent="android:Widget.EditText">
+        <item name="android:layout_marginBottom">5dp</item>
+        <item name="android:layout_marginLeft">4dp</item>
+        <item name="android:layout_marginRight">4dp</item>
+        <item name="android:layout_marginTop">3dp</item>
+    </style>
+    <style name="labelStyle" parent="android:Widget.TextView">
+        <item name="android:paddingBottom">2dp</item>
+        <item name="android:paddingLeft">6dp</item>
+        <item name="android:paddingRight">12dp</item>
+        <item name="android:paddingTop">1dp</item>
+    </style>
+    <style name="bttStyle" parent="android:Widget.Button">
+        <item name="android:gravity">center</item>
+        <item name="android:layout_marginBottom">2dp</item>
+        <item name="android:layout_marginLeft">2dp</item>
+        <item name="android:layout_marginRight">4dp</item>
+        <item name="android:layout_marginTop">2dp</item>
+    </style>
+    <string name="menu_add_label">Add Item</string>
 </resources>
