--- a/res/layout/splash.xml
+++ b/res/layout/splash.xml
@@ -3,33 +3,37 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
-
+
     <LinearLayout
-        android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="530px"
-            android:src="@drawable/logo"/>
-
+            android:layout_height="330dp"
+            android:src="@drawable/logo" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical" >
 
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="@string/loading" android:gravity="center"/>
+            android:gravity="center"
+            android:text="@string/loading" />
 
         <ImageView
             android:id="@+id/imgLoading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_gravity="center"/>
-
+            android:layout_gravity="center"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp" />
     </LinearLayout>
 
 </LinearLayout>
