--- a/res/layout/activity_product_details.xml
+++ b/res/layout/activity_product_details.xml
@@ -158,7 +158,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="@string/sold_item_label" />
+                    android:text="@string/sell_item_label" />
 
                 <LinearLayout
                     android:layout_width="fill_parent"
