--- a/res/layout/splash.xml
+++ b/res/layout/splash.xml
@@ -11,8 +11,10 @@
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="330dp"
+            android:layout_height="300dp"
+            android:scaleType="fitCenter"
             android:src="@drawable/logo" />
+
     </LinearLayout>
 
     <LinearLayout
