--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -5,12 +5,6 @@
         <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
         <item name="android:textStyle">bold</item>
     </style>
-    <style name="txt_fieldStyle" parent="android:Widget.EditText">
-        <item name="android:layout_marginBottom">5dp</item>
-        <item name="android:layout_marginLeft">4dp</item>
-        <item name="android:layout_marginRight">4dp</item>
-        <item name="android:layout_marginTop">3dp</item>
-    </style>
     <style name="labelStyle" parent="android:Widget.TextView">
         <item name="android:paddingBottom">2dp</item>
         <item name="android:paddingLeft">6dp</item>
@@ -23,5 +17,18 @@
         <item name="android:layout_marginLeft">2dp</item>
         <item name="android:layout_marginRight">4dp</item>
         <item name="android:layout_marginTop">2dp</item>
+    </style>
+    <style name="inputBox">
+        <item name="android:layout_marginBottom">7dp</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:layout_marginTop">7dp</item>
+    </style>
+    <style name="productImage">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:contentDescription">@string/image_product_content_description</item>
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:scaleType">centerCrop</item>
     </style>
 </resources>
