add more details to ProductListView elements

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-
+    <color name="positive_benefits">#00EF00</color>
+    <color name="negative_benefits">#EF3800</color>
 
 </resources>
