--- a/res/layout/list_item_product.xml
+++ b/res/layout/list_item_product.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="fill_parent"
-    android:layout_marginBottom="20dp"
-    android:layout_marginLeft="5dp"
-    android:layout_marginTop="20dp"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="10dp"
+    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+    android:layout_marginRight="@dimen/activity_horizontal_margin"
+    android:layout_marginTop="10dp"
     android:orientation="horizontal" >
 
     <ImageView
         android:id="@+id/photoItemImage"
         style="@style/productImage"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="70"
         android:contentDescription="@string/product_image_descrip"
@@ -18,26 +19,59 @@
         android:maxWidth="20dp"
         android:minHeight="17dp"
         android:minWidth="17dp"
+        android:scaleType="centerCrop"
         android:src="@android:drawable/ic_menu_gallery" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_weight="30"
         android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/nameItemText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/name_hint"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
-        <TextView
-            android:id="@+id/stockItemText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/stock_hint" />
+            <TextView
+                android:id="@+id/nameItemText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="10"
+                android:text="@string/name_hint"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+            <TextView
+                android:id="@+id/benefitItemText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="17"
+                android:gravity="right"
+                android:text="@string/benefits_hint"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/positive_benefits" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <TextView
+                android:id="@+id/stockItemText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/stock_hint" />
+
+            <TextView
+                android:id="@+id/priceItemText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right"
+                android:text="@string/price_hint"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
